--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -12,15 +12,16 @@ A data-driven system identification method forms part of the architecture and is
 \gls{MPC} is applied for swing damping control and is verified with \gls{HITL} simulations.  
 
 \paragraph
-A parameter estimator and \gls{LQR} is used in the baseline architecture.
+A parameter estimator and \gls{LQR} is used as a baseline architecture.
 The \gls{LQR} uses a predetermined model of the payload, which is completed with estimates of the payload mass and cable length.
-The architecture proposed in this work uses \gls{DMDc} to estimate a linear state-space model and approximate the unknown dynamics.
+The new architecture, proposed in this work, uses \gls{DMDc} to estimate a linear state-space model and approximate the unknown dynamics.
+This was also tested with a \gls{HAVOK} algorithm extended in this work to account for control.
 A short length of flight data is used for training.
 An \gls{MPC} uses the data-driven model to control the multirotor and damp the payload oscillations.
 
 \paragraph
 A Simulink\texttrademark~simulator was designed and verified with practical data.
-Within simulations, both the baseline and proposed architectures produced near swing-free multirotor control with different payload masses and cable lengths.
+Within simulations both the baseline and proposed architectures produced near swing-free multirotor control with different payload masses and cable lengths.
 Even with a dynamic payload producing irregular oscillations, both methods resulted in stabilised control.
 Both architectures also showed effective disturbance rejection.
 Despite the baseline method using an accurate predetermined model, the proposed method produced equal performances without prior knowledge of the dynamics.
@@ -30,8 +31,8 @@ In contrast, the proposed method consistently produced good performances.
 \paragraph
 The accuracy of the \gls{DMDc} models was verified with practical flight data.
 The proposed control architecture was also demonstrated in \gls{HITL} simulations.
-The hardware executed the \gls{MPC} at the desired speed, producing near swing-free control within a Gazebo simulator.
+The hardware executed the \gls{MPC} at the desired frequency, producing near swing-free control within a Gazebo simulator.
 Overall, it was shown that the proposed control architecture is practically feasible.
-Without knowledge of the payload dynamics, a data-driven model is used with \gls{MPC} for effective swing damping control with a multirotor.
+Without knowledge of the payload dynamics, a data-driven model can be used with \gls{MPC} for effective swing damping control with a multirotor.
 
 \glsresetall
