--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -5,27 +5,26 @@
 \vspace{-5mm}
 \paragraph
 This thesis considers the problem of stabilised control for a multirotor with an unknown suspended payload.
-The controller assumes no prior knowledge of the payload dynamics.
 The swinging payload negatively affects the multirotor flight dynamics by inducing oscillations in the system.
 An adaptive control architecture is proposed to damp these oscillations and produce stable flight with different unknown payloads.
-A data-driven system identification method forms part of the architecture and is demonstrated in simulation and with practical flight data.
+The architecture includes a data-driven system identification method that assumes no prior knowledge of the payload dynamics.
+This method is demonstrated in simulation and with practical flight data.
 \gls{MPC} is applied for swing damping control and is verified with \gls{HITL} simulations.  
 
 \paragraph
 A parameter estimator and \gls{LQR} is used as a baseline architecture.
-The \gls{LQR} uses a predetermined model of the payload, which is completed with estimates of the payload mass and cable length.
-The new architecture, proposed in this work, uses \gls{DMDc} to estimate a linear state-space model and approximate the unknown dynamics.
-This was also tested with a \gls{HAVOK} algorithm extended in this work to account for control.
-A short length of flight data is used for training.
+The \gls{LQR} uses a predetermined model of the system, which is completed with estimates of the payload mass and cable length.
+The newly proposed architecture uses \gls{DMDc} to estimate a linear state-space model and approximate the dynamics without using a predetermined model.
+The architecture was also tested with a \gls{HAVOK} algorithm which was extended in this work to account for control.
 An \gls{MPC} uses the data-driven model to control the multirotor and damp the payload oscillations.
 
 \paragraph
 A Simulink\texttrademark~simulator was designed and verified with practical data.
-Within simulations both the baseline and proposed architectures produced near swing-free multirotor control with different payload masses and cable lengths.
-Even with a dynamic payload producing irregular oscillations, both methods resulted in stabilised control.
+Within simulations both the baseline and proposed architectures produced near swing-free control with different payload masses and cable lengths.
+Even with a dynamic payload producing irregular oscillations, both methods achieved stabilised control.
 Both architectures also showed effective disturbance rejection.
 Despite the baseline method using an accurate predetermined model, the proposed method produced equal performances without prior knowledge of the dynamics.
-The baseline performance degraded significantly for a different multirotor mass because this parameter was not considered as an unknown.
+The baseline performance degraded significantly with 'n changed multirotor mass because this parameter was not considered as an unknown.
 In contrast, the proposed method consistently produced good performances. 
 
 \paragraph
