--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -2,4 +2,11 @@
 % \addcontentsline{toc}{chapter}{Acknowledgements}
 \makeatletter\@mkboth{}{Acknowledgements}\makeatother
 
-% ?? Add ackowledgements
+\paragraph
+I am ever so grateful for the following people who have had a great influence on this work and on my life:
+\begin{itemize}
+    \item Dr Willem Jordaan, for his encouragement, guidance, and great conversations.
+    \item My family, Arno, Anr\'e, Est\`e and Retief Louw, for their steadfast love.
+    \item Chelaine Maree, for her unwavering support and joyful companionship in a challenging year.
+    \item My colleagues in the ESL, for great times and jokes which made difficult times so much fun.
+\end{itemize}
